# weather-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  config-example.json  rustfmt.toml
.github/workflows/: rust-ci.yml
src/: main.rs
src/commands/: alerts.rs  atis.rs  location.rs  meta.rs  metar.rs  mod.rs  taf.rs  uv.rs  wx.rs
src/lib/: config.rs  db.rs  error.rs  mod.rs  utils.rs
