[package]
name = "weather-bot"
version = "0.1.0"
authors = ["smehlhoff"]
edition = "2018"

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serenity = "0.11.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
timeago = "0.4.2"
tokio = { version = "1.35.1", features = ["full"] }