[package]
name = "weather-bot"
version = "0.1.0"
authors = ["smehlhoff"]
edition = "2018"

[dependencies]
chrono = "0.4.35"
reqwest = { version = "0.11.26", features = ["json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
serenity = "0.11.7"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
timeago = "0.4.2"
tokio = { version = "1.36.0", features = ["full"] }